--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </section>
 
     <section>
-            <form class="form">
-                <input class="form__input" type="task" name="task" placeholder="Co jest do zrobienia?">
+            <form class="form js-form">
+                <input class="form__input js-newTask" type="task" name="task" placeholder="Co jest do zrobienia?">
                 <button class="form__button">Dodaj zadanie</button>
             </form>
     </section>
@@ -38,7 +38,7 @@
 
     <section>
         <div class="list">
-            <ul></ul>
+            <ul class="js-tasks"></ul>
         </div>
     </section>
 
