slight css edits and adding new tasks

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2 class="section__header">Lista zadań</h2>
     </section>
 
-    <section>
+    <section class="section">
         <div class="list">
             <ul class="js-tasks"></ul>
         </div>
