--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta property="og:image" contennet="images/letsdothis.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;1,100&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/container.css" rel="stylesheet">
     <link href="css/section.css" rel="stylesheet">
@@ -26,10 +26,10 @@
     </section>
 
     <section>
-            <form class="form js-form">
-                <input class="form__input js-newTask" type="task" name="task" placeholder="Co jest do zrobienia?">
-                <button class="form__button">Dodaj zadanie</button>
-            </form>
+        <form class="form js-form">
+            <input class="form__input js-newTask" type="task" name="task" placeholder="Co jest do zrobienia?" autofocus>
+            <button class="form__button">Dodaj zadanie</button>
+        </form>
     </section>
 
     <section class="section">
@@ -37,9 +37,7 @@
     </section>
 
     <section class="section">
-        <div class="list">
-            <ul class="js-tasks"></ul>
-        </div>
+        <ul class="list js-tasks"></ul>
     </section>
 
 </body>
