--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>List of tasks</title>
     <meta property="og:image" content="images/letsdothis.jpg">
     <link rel="icon" href="images/checklist.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -26,7 +26,7 @@
     <section class="section">
         <h2 class="section__header">Dodaj nowe zadanie</h2>
         <form class="form js-form">
-            <input class="form__input js-newTask" type="task" name="task" placeholder="Co jest do zrobienia?" autofocus>
+            <input class="form__input js-newTask" type="text" name="task" placeholder="Co jest do zrobienia?" autofocus>
             <button class="form__button">Dodaj zadanie</button>
         </form>
     </section>
