--- a/index.html
+++ b/index.html
@@ -1,41 +1,54 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>List of tasks</title>
-    <meta property="og:image" content="images/letsdothis.jpg">
-    <link rel="icon" href="images/checklist.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/container.css" rel="stylesheet">
-    <link href="css/section.css" rel="stylesheet">
-    <link href="css/form.css" rel="stylesheet">
-    <link href="css/list.css" rel="stylesheet">
+    <meta property="og:image" content="images/letsdothis.jpg" />
+    <link rel="icon" href="images/checklist.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/container.css" rel="stylesheet" />
+    <link href="css/section.css" rel="stylesheet" />
+    <link href="css/form.css" rel="stylesheet" />
+    <link href="css/list.css" rel="stylesheet" />
     <script src="js/script.js" defer></script>
-</head>
+  </head>
 
-<body class="container">
+  <body class="container">
     <h1>Lista zadań</h1>
 
     <section class="section">
-        <h2 class="section__header">Dodaj nowe zadanie</h2>
-        <form class="form js-form">
-            <input class="form__input js-newTask" type="text" name="task" placeholder="Co jest do zrobienia?" autofocus>
-            <button class="form__button">Dodaj zadanie</button>
-        </form>
+      <h2 class="section__header">Dodaj nowe zadanie</h2>
+      <form class="form js-form">
+        <input
+          class="form__input js-newTask"
+          type="text"
+          name="task"
+          placeholder="Co jest do zrobienia?"
+          autofocus
+        />
+        <button class="form__button">Dodaj zadanie</button>
+      </form>
     </section>
 
     <section class="section">
-        <h2 class="section__header">Lista zadań</h2>
-        <ul class="list js-tasks"></ul>
+      <div class="section__header">
+        <h2 class="section__headerOfTaskList">Lista zadań</h2>
+        <div class="section__buttons js-toggleTaskStatus"></div>
+      </div>
+      <ul class="list js-tasks"></ul>
     </section>
-
-</body>
-
+  </body>
 </html>
